--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,17 @@
-*{
-	margin: 0;
-	padding: 0;
-	font-family: Purisa;
+* {
+    margin: 0;
+    padding: 0;
+    font-family: Purisa;
 }
 
-header{
-	background-image: url("/home/user/Desktop/WEBSITE/img/veg2.jpg");
-	height: 100vh;
-	background-size: cover;
-	background-position: center;
+header {
+    background-image: url("./img/veg2.jpg");
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
 }
 
-ul{
+/* ul{
 	float: right;
 	list-style-type: none;
 	margin-top: 25px;
@@ -39,23 +39,23 @@ ul li a:hover{
 ul li.active a{
      background-color: black;
     color:white;
-}
+} */
 
-.main{
+.main {
     max-width: 1200px;
     margin: auto;
-    
+
 }
 
-.button{
+.button {
     position: absolute;
-    top:50%;
-    left:50%;
-    transform: translate(-50%,-50%);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
-.btn{
- 
+.btn {
+
     padding: 10px;
     font-size: 30px;
     color: black;
@@ -63,8 +63,8 @@ ul li.active a{
     transition: 0.6s ease;
 }
 
-.btn:hover{
+.btn:hover {
     background-color: black;
-    color:white;
-    
+    color: white;
+
 }
