--- a/css/style4.css
+++ b/css/style4.css
@@ -1,10 +1,11 @@
-*{
-	margin: 0;
-	padding: 0;
-	font-family: Verenda;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: Verenda;
 
 }
-ul{
+
+/* ul{
 	float: right;
 	list-style-type: none;
 	margin-top: 25px;
@@ -33,15 +34,15 @@ ul li a:hover{
 ul li.active a{
      background-color: black;
     color:white;
-}
+} */
 
-body{
-    margin: auto;
- padding: 0;
-    background-image: url("/home/user/Desktop/WEBSITE/img/prod.jpg");
-   height: 100vh;
-	background-size: cover;
-	background-position: center;
+body {
+  margin: auto;
+  padding: 0;
+  background-image: url("./img/prod.jpg");
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
 }
 
 .row {
@@ -50,6 +51,6 @@ body{
 
 .column {
   flex: 33.33%;
-    margin-left: 10px;
+  margin-left: 10px;
   padding: 5px;
 }
